# ef-tests

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  blockchain-tests-skip.yml  data2.txt  gas.py  log4rs.yml  test_v0.out
.cargo/: config.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  02_FEATURE_REQUEST.md  03_CODEBASE_IMPROVEMENT.md
.github/actions/bootstrap/: action.yml
.github/actions/install_rust/: action.yml
.github/actions/setup_native_deps/: action.yml
.github/workflows/: ci.yml  dependencies.yml  kakarot.yml  linters.yml  test.yml  trunk-check.yaml  trunk-check.yml
.katana/: contracts.json  dump.json
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
crates/build-utils/: Cargo.toml
crates/build-utils/src/: constants.rs  content_reader.rs  converter.rs  dir_reader.rs  filter.rs  lib.rs  path.rs  utils.rs
crates/ef-testing/: Cargo.toml  build.rs  program.sierra
crates/ef-testing-proc-macro/: Cargo.toml
crates/ef-testing-proc-macro/src/: constants.rs  content_reader.rs  converter.rs  dir_reader.rs  filter.rs  lib.rs  utils.rs
crates/ef-testing-proc-macros/: Cargo.toml
crates/ef-testing-proc-macros/src/: constants.rs  content_reader.rs  converter.rs  dir_reader.rs  filter.rs  lib.rs  path.rs  utils.rs
crates/ef-testing/ethereum-tests/GeneralStateTests/VmTests/vmArithmeticTest/: add.json  mul.json
crates/ef-testing/src/: constants.rs  lib.rs
crates/ef-testing/src/evm_sequencer/: account.rs  constants.rs  contract_class.rs  evm_state.rs  mod.rs  setup.rs  types.rs  utils.rs
crates/ef-testing/src/evm_sequencer/account/: mod.rs  v0.rs  v1.rs
crates/ef-testing/src/evm_sequencer/evm_state/: mod.rs  v0.rs  v1.rs
crates/ef-testing/src/evm_sequencer/sequencer/: mod.rs  v0.rs  v1.rs
crates/ef-testing/src/evm_sequencer/sequencer/resources/: versioned_constants.json
crates/ef-testing/src/evm_sequencer/types/: contract_class.rs  felt.rs  mod.rs
crates/ef-testing/src/models/: blockchain_test.rs  case.rs  error.rs  mod.rs  result.rs  suite.rs
crates/ef-testing/src/sequencer/: constants.rs  mod.rs  setup.rs  utils.rs
crates/ef-testing/src/storage/: contract.rs  eoa.rs  fee_token.rs  kakarot.rs  mod.rs  models.rs
crates/ef-testing/src/test_data/: blockchain_test.json
crates/ef-testing/src/test_utils/: mod.rs
crates/ef-testing/src/traits/: mod.rs
crates/ef-testing/src/utils/: assert.rs  helpers.rs  io.rs  mod.rs  starknet.rs
crates/ef-testing/test_data/BlockchainTests/GeneralStateTests/VmTests/vmArithmeticTest/: add.json
crates/ef-testing/tests/: tests.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: commit.rs  config.rs  constants.rs  execution.rs  lib.rs  native.rs  sequencer.rs  serde.rs  state.rs  transaction.rs
crates/sequencer/src/resources/: versioned_constants.json
crates/sequencer/src/serde/: contract.rs  mod.rs  program.rs  state.rs  utils.rs
crates/sequencer/src/test_data/cairo_0/compiled_classes/: account.json
crates/sequencer/src/test_data/cairo_1/compiled_classes/: account.json  counter.json
crates/sequencer/src/test_data/classes/: counter.cairo
crates/sequencer/src/test_data/native/classes/: account.cairo  counter.cairo
docs/: CONTRIBUTING.md
logs_877/: -2139095040_test.txt  -2147483648_Trunk Check Runner.txt  0_Trunk  Trunk Check Runner.txt
logs_877/Rust tests  test/: 18_Post Run actionscheckout@v3.txt  19_Complete job.txt  1_Set up job.txt  2_Run actionscheckout@v3.txt  3_Set up Python.txt  4_Setup rust env.txt  5_Retrieve cached dependencies.txt  6_fetch ef tests.txt  7_fetch Kakarot.txt
logs_877/Trunk  Trunk Check Runner/: 10_Post Checkout.txt  1_Set up job.txt  2_Checkout.txt  32_Complete job.txt  3_Run actions-rstoolchain@v1.txt  4_Run Swatinemrust-cache@v2.txt  5_Trunk Check.txt  8_Post Trunk Check.txt  9_Post Run Swatinemrust-cache@v2.txt
scripts/: compute_resources.py  dependencies.sh  generate_skip_file.py
