[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Elias Tazartes <@eikix>",
  "Clement Walter <@clementwalter>",
  "Gregory Edison <@greged93>",
  "Johann Bestowrous <@jobez>",
  "Harsh Bajpai <@bajpai244>",
  "Danilo Kim <@danilowhk>",
  "Fred Tupas <@ftupas>",
]
description = "EF standard testing for Kakarot"
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/ef-tests"
readme = "./README.md"
license = "MIT"

[profile.dev]
incremental = true

[workspace.dependencies]
# Eth deps
alloy-rlp = { version = "0.3.4", default-features = false }
ef-tests = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.1", default-features = false, features = [
  "ef-tests",
] }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs.git", tag = "v2.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.0.1", default-features = true, features = [
  "std",
] }
revm-interpreter = { version = "6.0.0", default-features = false }
revm-primitives = { version = "5.0.0", default-features = false }

# Starknet deps
cairo-lang-casm = "2.6.3"
cairo-lang-starknet = "2.6.3"
cairo-lang-utils = "2.6.3"
cairo-lang-starknet-classes = "2.6.3"
cairo-vm = "0.9.2"
blockifier = { package = "blockifier", git = "https://github.com/kkrt-labs/blockifier.git", rev = "6003d36", default-features = false, features = [
  "testing",
] }
starknet = "0.6.0"
starknet-crypto = "0.6.0"
starknet_api = "0.12.0-dev.0"

# Other
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
ctor = "0.2.8"
dotenvy = "0.15.7"
eyre = "0.6.12"
lazy_static = "1.4.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-integer = "0.1.46"
num-traits = "0.2.18"
proc-macro2 = "1.0.81"
quote = "1.0.36"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["gzip"] }
rstest = "0.19.0"
syn = "2.0.60"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
zip = "0.6.6"

# Serde
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
hashbrown = "0.14.3"
# Log
log = "0.4.21"
