[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
  "Elias Tazartes <@eikix>",
  "Clement Walter <@clementwalter>",
  "Gregory Edison <@greged93>",
  "Johann Bestowrous <@jobez>",
  "Harsh Bajpai <@bajpai244>",
  "Danilo Kim <@danilowhk>",
  "Fred Tupas <@ftupas>",
]
description = "EF standard testing for Kakarot"
homepage = "https://github.com/kkrt-labs"
repository = "https://github.com/kkrt-labs/ef-tests"
readme = "./README.md"
license = "MIT"

[profile.dev]
incremental = true

[workspace.dependencies]
# Eth deps
alloy-rlp = { version = "0.3.8", default-features = false }
ef-tests = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = false, features = [
  "ef-tests",
] }
alloy-signer-local = { version = "0.5.4", default-features = false }
alloy-primitives = { version = "0.8.9", default-features = false }
alloy-eips = { version = "0.5.4", default-features = false }
alloy-consensus = { version = "0.5.4", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.1", default-features = true, features = [
  "std",
] }
revm-interpreter = { version = "13.0", default-features = false }
revm-primitives = { version = "13.0", default-features = false }

# Starknet deps
cairo-lang-casm = "2.8.2"
cairo-lang-starknet = "2.8.2"
cairo-lang-utils = "2.8.2"
cairo-lang-starknet-classes = "2.8.2"
cairo-lang-sierra = "2.8.2"
cairo-native = { git = "https://github.com/lambdaclass/cairo_native", rev="79a8dcffe1e562e80198425e7c9f3a328c783947"}
cairo-vm = "1.0.1"
blockifier = { package = "blockifier", git = "https://github.com/kkrt-labs/sequencer.git", rev="fbff43b0913da5946afb5c92f8aba6cfd1025322", default-features = false, features = [
  "testing",
] }
starknet = "0.12"
starknet-crypto = "0.7"
starknet_api = { package = "starknet_api", git = "https://github.com/kkrt-labs/sequencer.git", rev="fbff43b0913da5946afb5c92f8aba6cfd1025322" }

# Other
async-trait = "0.1"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
ctor = "0.2"
dotenvy = "0.15"
eyre = "0.6"
lazy_static = "1.5"
num-bigint = { version = "0.4", features = ["serde"] }
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.10"
regex = "1.10"
reqwest = { version = "0.12", features = ["gzip"] }
rstest = "0.22"
syn = "2.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
zip = "2.2"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hashbrown = "0.14"
# Log
log = "0.4"
