[package]
name = "ef-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
bytes = { workspace = true }

# Eth deps
ef-tests = { workspace = true }
ethers-signers = { workspace = true }
reth-primitives = { workspace = true }
revm-primitives = { workspace = true }
reth-rlp = { workspace = true }

# Kakarot deps
sequencer = { path = "../sequencer" }

# Starknet deps
cairo-lang-casm = { workspace = true }
cairo-lang-compiler = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-native = { workspace = true }
cairo-vm = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet-crypto = { workspace = true }
starknet_in_rust = { workspace = true }

# Log
log = { workspace = true }

# Other
async-trait = { workspace = true }
ctor = { workspace = true }
chrono = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
eyre = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true, optional = true }

[features]
v0 = []
v1 = []
native = ["v1"]

[build-dependencies]
build-utils = { path = "../build-utils" }
cargo-emit = "0.2.1"
lazy_static = { workspace = true }
serde_yaml = { workspace = true }
