[package]
name = "sequencer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
# Starknet
cairo-lang-compiler = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-utils = { workspace = true }
cairo-native = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet_in_rust = { workspace = true }

# Other
eyre = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
rustc-hash = "1.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8.0"
