[package]
name = "sequencer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
# Starknet
blockifier = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet_api = { workspace = true }
starknet = { workspace = true }

# Other
eyre = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tempfile = "3.8.0"
